...
            android:gravity="center">


        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/nameView"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp" />

        <CheckBox
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_weight="0" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
