...
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="Archive"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/goBackToMainButton"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="32sp" />

    <ImageButton
            android:id="@+id/goBackToMainButton"
            android:layout_width="28dp"
...
